# repurpose-ai

./: README.md  docker-compose.yml  package.json
ai-service/: .gitignore  requirements.txt
ai-service/content_repurposer/: README.md  pyproject.toml  report.md
ai-service/content_repurposer/src/content_repurposer/: crew.py  main.py
ai-service/content_repurposer/src/content_repurposer/config/: agents.yaml  tasks.yaml
backend/: package.json  pnpm-lock.yaml  tsconfig.json
backend/src/: index.ts
backend/src/config/: passport.ts
backend/src/routes/: auth.ts  repurpose.ts
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/how-it-works/: page.tsx
frontend/app/login/: page.tsx
frontend/lib/: axios.ts
